
/**
 * Write a description of interface Builder here.
 *
 * @author (your name)
 * @version (a version number or a date)
 */
public interface Builder
{
    void buildpaymentHistory(float input);
    void buildamounts_owed(float input);
    void buildcredit_history(float input);
    void buildcredit_mix(float input);
    void buildnewcredit(float input);
    
    
}