import java.util.*;
/**
 * Write a description of class LogOutState here.
 *
 * @author (your name)
 * @version (a version number or a date)
 */
public class ClientState implements LoginState
{
    Scanner scan = new Scanner(System.in);
    private String val;
    CreditScoreDirector cd = new CreditScoreDirector();
    CreditScoreBuilder cb = new CreditScoreBuilder();

    public void login()
    {
        System.out.println("Hello! Would you like to calculate your credit score? (y/n) ");
        val = scan.nextLine();
        if(val.equals("y"))
        {
            cd.addCommand();
            cd.construct(cb);
        }
        
    }
    public void logout()
    {
        System.out.println("Bye! Have a nice day!");
        
    }
}