import java.util.Random; 
/**
 * Write a description of class Credit_Score here.
 *
 * Ivan Thankachen
 * Credit_Score Class
 * @version (a version number or a date)
 */

public class Credit_Score
{
    // instance variables - replace the example below with your own
    public Credit_Score()
    {
    }
    int credit_score;
    float payment_history;
    float amounts_owed;
    float credit_history;
    float credit_mix;
    float new_credit;
    
    
    
}