
/**
 * Ivan Thankachen
 * LoginFactory Interface
 */
public interface LoginFactory
{
    public Login createLogin();
    
}