
/**
 * Write a description of interface LoginState here.
 *
 * @author (your name)
 * @version (a version number or a date)
 */
public interface LoginState
{
    public void login();
    public void logout();
}