' Generated by UML Generator
' Encoded: rLVVJzim47xlN-77CaZLZKsQ8bR1G1EJO4EgzZHDbPCOQf74bUr0Ew1_-ywnJUp4BQdKbxrKxTrtvy_tqpqL4dDP5Vb0tDDoWJakK9fZ8Swav3If9FcUid9A_n8q7infHb1AUPgJmQ16eNDECYgdAUFaQqNpZ73qD40eIcjvRFIp6e2-e98yUgBX0O3N8iLbZARmMOAzHfbVm-bAI5ACQ5aZ7t0EG61MtgcV2HOaHXchabnvFnwFHsCbB_3I4N-sOWBcCw7EjLf5DOAFmqIHN-1LGKfvIOLaV3M4U5HmXTkSONaGemT6irSeBbXLIZ5ZZoJR2jI1cCrx-3JGWYwtmY0w6Xb4lGGoSq4vIU5uanfM5BZCH8pEECUhAs1sSgvb4nFyHZ7H6KhVsrHUqwK1U-binCRW0xZNCVe98V9DkWfZT6nFCIa8dUIhZE776FqWZnhW6xN5nk1JZ6wyRFjMGLrjgii5Pmtp9ZtGAKBoAfN3HFT2Z4nJTBEJK_2l4r89mY4RrtXnealxo9IuJSSb5dEbdJWC535onUveUO4b7bQsBOxGmdvrcSr9UlycEc4i9xXK1hd2wjuREkHfAGc_nIb1RhUl-tVFkc_thFjtpxfVzwntwPwphA3bVvoUsjathBf-LL_Z46wDfQQaJEelpdsxlLfd5e9aGlHwDR8aAUo5fiQxEo18oVMxenDteZa3Q3yCjVDVmXJpuHEiH4dJ5rHW21NcTyBcuFSVnmmdqEiGOBqkTJorWr1o0YKX5BFNF8EF7eMnpSQMHsl6JE4sH8UgzvwDMdispUBWFd7digSnKpO9XRvhPHHE--IsJ6qWGC0gkQNMcslsCTO1wgoCVHQKz_Af7Pi9PHuWm5y9pTIq8wuvUUqEIKViZyIk0WQW8uH8p-nRpBzJwndMgfeTHaTmO-ypalKite5GUB7ldT4E5LTtCcE2t11UK24eF1JSSWmqoMZqFB5BDgH_5qLUYGr2_SaKIDy_g8-YIMUgRWHsLyGRFlq4R0Itkt0ZC9ZN87eqScAdNrfH1F7KXQ9tkoFmbgMoDRZkJgopOayEwYU1-XcyfMulDk-OW3RinHdtjODcBdgw9a5UqBPXx16TWUaH3MYt46tYRQaQIKTlyn4SD85GTH115jvKwP9egIs7y6pnI6o2R6OHpjafAJFuO_uF
' URL: http://www.plantuml.com/plantuml/uml/rLVVJzim47xlN-77CaZLZKsQ8bR1G1EJO4EgzZHDbPCOQf74bUr0Ew1_-ywnJUp4BQdKbxrKxTrtvy_tqpqL4dDP5Vb0tDDoWJakK9fZ8Swav3If9FcUid9A_n8q7infHb1AUPgJmQ16eNDECYgdAUFaQqNpZ73qD40eIcjvRFIp6e2-e98yUgBX0O3N8iLbZARmMOAzHfbVm-bAI5ACQ5aZ7t0EG61MtgcV2HOaHXchabnvFnwFHsCbB_3I4N-sOWBcCw7EjLf5DOAFmqIHN-1LGKfvIOLaV3M4U5HmXTkSONaGemT6irSeBbXLIZ5ZZoJR2jI1cCrx-3JGWYwtmY0w6Xb4lGGoSq4vIU5uanfM5BZCH8pEECUhAs1sSgvb4nFyHZ7H6KhVsrHUqwK1U-binCRW0xZNCVe98V9DkWfZT6nFCIa8dUIhZE776FqWZnhW6xN5nk1JZ6wyRFjMGLrjgii5Pmtp9ZtGAKBoAfN3HFT2Z4nJTBEJK_2l4r89mY4RrtXnealxo9IuJSSb5dEbdJWC535onUveUO4b7bQsBOxGmdvrcSr9UlycEc4i9xXK1hd2wjuREkHfAGc_nIb1RhUl-tVFkc_thFjtpxfVzwntwPwphA3bVvoUsjathBf-LL_Z46wDfQQaJEelpdsxlLfd5e9aGlHwDR8aAUo5fiQxEo18oVMxenDteZa3Q3yCjVDVmXJpuHEiH4dJ5rHW21NcTyBcuFSVnmmdqEiGOBqkTJorWr1o0YKX5BFNF8EF7eMnpSQMHsl6JE4sH8UgzvwDMdispUBWFd7digSnKpO9XRvhPHHE--IsJ6qWGC0gkQNMcslsCTO1wgoCVHQKz_Af7Pi9PHuWm5y9pTIq8wuvUUqEIKViZyIk0WQW8uH8p-nRpBzJwndMgfeTHaTmO-ypalKite5GUB7ldT4E5LTtCcE2t11UK24eF1JSSWmqoMZqFB5BDgH_5qLUYGr2_SaKIDy_g8-YIMUgRWHsLyGRFlq4R0Itkt0ZC9ZN87eqScAdNrfH1F7KXQ9tkoFmbgMoDRZkJgopOayEwYU1-XcyfMulDk-OW3RinHdtjODcBdgw9a5UqBPXx16TWUaH3MYt46tYRQaQIKTlyn4SD85GTH115jvKwP9egIs7y6pnI6o2R6OHpjafAJFuO_uF
' Generated on: 2026-05-27T15:37:18.508636

@startuml
skinparam classAttributeIconSize 0
hide circle

class CreditScoreBuilder {
  -credit: Credit_Score = new Credit_Score()
  ~scan: Scanner = new Scanner(System.in)
  ~val: String
  ~base: double = 300.0
  ~max: double = 800.0
  ~eval_score: double
  --
  +buildpaymentHistory(input: float): void
  +buildamounts_owed(input: float): void
  +buildcredit_history(input: float): void
  +buildcredit_mix(input: float): void
  +buildnewcredit(input: float): void
}

class CreditScoreDirector {
  -commands: ArrayList<Command> = new ArrayList<>()
  ~c1: CreditMixCommand = new CreditMixCommand()
  ~c2: AmountsOwedCommand = new AmountsOwedCommand()
  ~c3: CreditHistoryCommand = new CreditHistoryCommand()
  ~c4: NewCreditCommand = new NewCreditCommand()
  ~c5: PaymentHistoryCommand = new PaymentHistoryCommand()
  --
  +addCommand(): void
  +construct(builder: Builder): void
}

class Client {
  -users: Map<String, String> = new HashMap<>()
  --
  +storeLoginData(u: String, p: String): void
  +checkLoginData(u: String, p: String): boolean
  +loginSystem(): void
}

interface Builder {
  ~buildpaymentHistory(input: float): void
  ~buildamounts_owed(input: float): void
  ~buildcredit_history(input: float): void
  ~buildcredit_mix(input: float): void
  ~buildnewcredit(input: float): void
}

class Admin {
  -users: Map<String, String> = new HashMap<>()
  --
  +storeLoginData(u: String, p: String): void
  +checkLoginData(u: String, p: String): boolean
  +loginSystem(): void
}

interface LoginFactory {
  +createLogin(): Login
}

class AmountsOwedCommand {
  ~inp: float
  --
  +execute(builder: CreditScoreBuilder): void
}

interface Command {
  +execute(builder: CreditScoreBuilder): void
}

class CreditMixCommand {
  ~inp: float
  --
  +execute(builder: CreditScoreBuilder): void
}

class User {
  +{static} main(args: String[]): void
}

abstract class Login {
  +loginSystem(): void
  +storeLoginData(user: String, pass: String): void
  +checkLoginData(user: String, pass: String): boolean
}

class ClientState {
  ~scan: Scanner = new Scanner(System.in)
  -val: String
  ~cd: CreditScoreDirector = new CreditScoreDirector()
  ~cb: CreditScoreBuilder = new CreditScoreBuilder()
  --
  +login(): void
  +logout(): void
}

interface LoginState {
  +login(): void
  +logout(): void
}

class NewCreditCommand {
  ~inp: float
  --
  +execute(builder: CreditScoreBuilder): void
}

class Credit_Score {
  ~credit_score: int
  ~payment_history: float
  ~amounts_owed: float
  ~credit_history: float
  ~credit_mix: float
  ~new_credit: float
  --
  +Credit_Score()
}

class ClientFactory {
  +createLogin(): Login
}

class CreditHistoryCommand {
  ~inp: float
  --
  +execute(builder: CreditScoreBuilder): void
}

class AdminFactory {
  +createLogin(): Login
}

class PaymentHistoryCommand {
  ~inp: float
  --
  +execute(builder: CreditScoreBuilder): void
}

class AdminState {
  +login(): void
  +logout(): void
  +choosePermissions(): void
}

CreditScoreBuilder ..|> Builder
CreditScoreBuilder *-- Credit_Score
CreditScoreDirector o-- Command
CreditScoreDirector --> CreditMixCommand
CreditScoreDirector --> AmountsOwedCommand
CreditScoreDirector --> CreditHistoryCommand
CreditScoreDirector --> NewCreditCommand
CreditScoreDirector --> PaymentHistoryCommand
CreditScoreDirector ..> Builder
Client --|> Login
Admin --|> Login
LoginFactory ..> Login
AmountsOwedCommand ..|> Command
AmountsOwedCommand ..> CreditScoreBuilder
Command ..> CreditScoreBuilder
CreditMixCommand ..|> Command
CreditMixCommand ..> CreditScoreBuilder
ClientState ..|> LoginState
ClientState --> CreditScoreDirector
ClientState --> CreditScoreBuilder
NewCreditCommand ..|> Command
NewCreditCommand ..> CreditScoreBuilder
ClientFactory ..|> LoginFactory
ClientFactory ..> Login
CreditHistoryCommand ..|> Command
CreditHistoryCommand ..> CreditScoreBuilder
AdminFactory ..|> LoginFactory
AdminFactory ..> Login
PaymentHistoryCommand ..|> Command
PaymentHistoryCommand ..> CreditScoreBuilder
AdminState ..|> LoginState
@enduml